fix: routes swagger
